[project]
name = "strux"
version = "0.0.1"
authors = [
    { name="Matthew Farrugia-Roberts", email="matthew@far.in.net" },
]
description = "A rough JAX utility library for easily creating jit-able dataclasses."
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "jax",
]

[project.optional-dependencies]
dev = [
    "jaxtyping",
    "pytest",
    "pytest-codeblocks",
    "beartype",
]

[project.urls]
Homepage = "https://github.com/matomatical/strux"
Issues = "https://github.com/matomatical/strux/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "strux"

[tool.pytest.ini_options]
testpaths = [
    "tests.py",
    "README.md",
]
addopts = ["--codeblocks"]
